<resources>
    <string name="app_name">Foody</string>
    <string name="version">version</string>
    <string name="loading">Loading...</string>
    <string name="welcome">Welcome to my app</string>
    <string name="facebook_app_id">395189130991393</string>
    <string name="fb_login_protocol_scheme">fb395189130991393</string>
    <string name="forgetpass">Don\'t have an account?</string>
    <string name="register"><u>Create an account</u></string>
    <string name="place">Place</string>
    <string name="food">Food</string>
    <string name="Latest">Latest</string>
    <string name="Category">Category</string>
    <string name="HCM">HCM City</string>
    <string name="nearby">Nearby</string>
    <string name="order">Order Delivery</string>
    <string name="game">Game &amp; Fun</string>
    <string name="blog">Blogs</string>
    <string name="member">Top members</string>
    <string name="reviews">Reviews</string>
    <string name="order1">Order</string>
    <string name="download">Download</string>
    <string name="checkin">Check-in</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="review">Review</string>
    <string name="namewifi">Wifi name</string>
    <string name="pass">Password</string>
    <string name="accept">Accept</string>
    <string name="post">Post</string>
    <string name="menu">Menu</string>
    <string name="tenquan">Tên quán ăn</string>
    <string name="giatoida">Giá tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="giahang">Giao hàng</string>
    <string name="khonggiaohang">Không giao hàng</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="chinhanh">Chi nhánh</string>
    <string name="tenmon">Tên món</string>
    <string name="giatien">Giá tiền</string>
    <string name="luuquanan">Lưu quán ăn</string>
    <string name="themthucdon">Thêm thực đơn</string>
</resources>
