<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="5dp"
    android:padding="10dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtWifiName"
        android:hint="@string/namewifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtPassWifi"
        android:hint="@string/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/accept"
        android:id="@+id/btnDongYCapNhatWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>