<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <EditText
                android:id="@+id/edtTenQuanAn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tenquan" />

            <EditText
                android:id="@+id/edtGiaToiDa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/giatoida" />

            <EditText
                android:id="@+id/edtGiaToiThieu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/giatoithieu" />

            <RadioGroup
                android:id="@+id/rdgTrangThai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giahang" />

                <RadioButton
                    android:checked="true"
                    android:id="@+id/rdKhongGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khonggiaohang" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGioMoCua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/giomocua"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnGioDongCua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/giodongcua"
                    android:textAllCaps="false" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <VideoView
                    android:id="@+id/VideoView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_themvideo" />

                <ImageView
                    android:id="@+id/imgVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/khungTienIch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/khungThemChiNhanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerKhuVuc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

            <ImageView
                android:id="@+id/imgQuanAn1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_themhinhanh" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgQuanAn2"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgQuanAn3"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgQuanAn4"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgQuanAn5"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgQuanAn6"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/khungChuaThucDon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

            <Button
                android:id="@+id/btnThemQuanAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/luuquanan" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>