<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Grey"
        android:orientation="vertical">

        <RadioGroup
            android:background="@color/white"
            android:id="@+id/rdg_tab"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <RadioButton
                android:checked="true"
                android:background="@drawable/changebackground_tab"
                android:textColor="@drawable/changetext_tab_home"
                android:id="@+id/rd_latest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_weight="1"
                android:text="@string/Latest"
                android:drawableBottom="@drawable/down"
                android:button="@android:color/transparent"/>

            <View
                android:background="@color/Grey"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <RadioButton
                android:background="@drawable/changebackground_tab"
                android:textColor="@drawable/changetext_tab_home"
                android:id="@+id/rd_category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Category"
                android:textAlignment="center"
                android:drawableBottom="@drawable/down"
                android:button="@android:color/transparent"/>

            <View
                android:background="@color/Grey"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <RadioButton
                android:background="@drawable/changebackground_tab"
                android:textColor="@drawable/changetext_tab_home"
                android:id="@+id/rd_hcm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/HCM"
                android:textAlignment="center"
                android:drawableBottom="@drawable/down"
                android:button="@android:color/transparent"/>

        </RadioGroup>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestScrollODau"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:drawableLeft="@drawable/nearby"
                        android:textAllCaps="false"
                        android:text="@string/nearby"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"/>

                    <Button
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:drawableLeft="@drawable/blog"
                        android:textAllCaps="false"
                        android:text="@string/blog"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:drawableLeft="@drawable/order"
                        android:textAllCaps="false"
                        android:text="@string/order"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"/>

                    <Button
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:drawableLeft="@drawable/gameandfun"
                        android:textAllCaps="false"
                        android:text="@string/game"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:drawableLeft="@drawable/review"
                        android:textAllCaps="false"
                        android:text="@string/reviews"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"/>

                    <Button
                        android:drawablePadding="10dp"
                        android:gravity="left|center"
                        android:padding="10dp"
                        android:drawableLeft="@drawable/user"
                        android:textAllCaps="false"
                        android:text="@string/member"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"/>

                </LinearLayout>



            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleOdau"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

                <ProgressBar
                    android:indeterminate="true"
                    android:layout_marginTop="10dp"
                    android:id="@+id/progressBarPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>